# splinegen

./: .gitignore  CMakeLists.txt  LICENSE  app.cpp  app.h  boundsRect.h  drawer.cpp  main.cpp  point.h  pointTransformer.h  textContainer.h  tvmath.h
libs/fpm/: math.hpp
libs/tv/: spline.h  tvmath.h
src/: app.cpp  app.h  drawer.cpp  drawer.h  main.cpp  point.h  pointTransformer.h  pointUtils.h
